[gd_scene load_steps=3 format=3 uid="uid://b7qvx8k3n6mhj"]

[ext_resource type="Script" path="res://scripts/entities/golfer.gd" id="1_golfer"]

[sub_resource type="CircleShape2D" id="CircleShape2D_golfer"]
radius = 8.0

[node name="Golfer" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 1
script = ExtResource("1_golfer")

[node name="Visual" type="Node2D" parent="."]

[node name="Shadow" type="Polygon2D" parent="Visual"]
z_index = -1
color = Color(0, 0, 0, 0.25)
polygon = PackedVector2Array(-7, 13, 7, 13, 9, 16, -9, 16)

[node name="Shoes" type="Polygon2D" parent="Visual"]
color = Color(0.15, 0.15, 0.15, 1)
polygon = PackedVector2Array(-4, 11, -4, 14, -1, 14, -1, 11, 1, 11, 1, 14, 4, 14, 4, 11)

[node name="Legs" type="Polygon2D" parent="Visual"]
color = Color(0.25, 0.25, 0.35, 1)
polygon = PackedVector2Array(-4, 4, -3, 11, -1, 11, 0, 4, 0, 4, 1, 11, 3, 11, 4, 4)

[node name="Body" type="Polygon2D" parent="Visual"]
color = Color(0.9, 0.35, 0.35, 1)
polygon = PackedVector2Array(-5, -5, -6, 0, -5, 5, 5, 5, 6, 0, 5, -5)

[node name="Collar" type="Polygon2D" parent="Visual"]
color = Color(1, 1, 1, 1)
polygon = PackedVector2Array(-3, -5, -2, -4, 2, -4, 3, -5)

[node name="Arms" type="Polygon2D" parent="Visual"]
color = Color(0.95, 0.8, 0.65, 1)
polygon = PackedVector2Array(-9, -1, -6, -1, -6, 2, 6, 2, 6, -1, 9, -1, 9, 3, 6, 4, -6, 4, -9, 3)

[node name="Hands" type="Polygon2D" parent="Visual"]
color = Color(0.95, 0.8, 0.65, 1)
polygon = PackedVector2Array(-10, 2, -8, 2, -8, 5, -10, 5, 8, 2, 10, 2, 10, 5, 8, 5)

[node name="Head" type="Polygon2D" parent="Visual"]
color = Color(0.95, 0.8, 0.65, 1)

[node name="Hair" type="Polygon2D" parent="Visual"]
color = Color(0.3, 0.2, 0.1, 1)
polygon = PackedVector2Array(-4, -14, -3, -15, 3, -15, 4, -14, 4, -12, -4, -12)

[node name="Cap" type="Polygon2D" parent="Visual"]
color = Color(0.2, 0.4, 0.7, 1)
polygon = PackedVector2Array(-5, -13, -4, -15, 4, -15, 5, -13, 7, -12, -7, -12)

[node name="CapBrim" type="Polygon2D" parent="Visual"]
color = Color(0.15, 0.3, 0.55, 1)
polygon = PackedVector2Array(-7, -12, 8, -12, 9, -11, -8, -11)

[node name="GolfClub" type="Node2D" parent="Visual"]
visible = false
position = Vector2(0, 0)

[node name="Shaft" type="Polygon2D" parent="Visual/GolfClub"]
color = Color(0.6, 0.6, 0.6, 1)
polygon = PackedVector2Array(-1, 3, 1, 3, 2, 25, 0, 25)

[node name="Grip" type="Polygon2D" parent="Visual/GolfClub"]
color = Color(0.2, 0.2, 0.2, 1)
polygon = PackedVector2Array(-1, 3, 1, 3, 1, 8, -1, 8)

[node name="ClubHead" type="Polygon2D" parent="Visual/GolfClub"]
color = Color(0.7, 0.7, 0.7, 1)
polygon = PackedVector2Array(-3, 24, 3, 24, 4, 28, -2, 28)

[node name="InfoContainer" type="VBoxContainer" parent="."]
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = -25.0

[node name="ScoreLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "E, Hole 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Golfer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_golfer")
